--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,13 @@
             <version>7.8.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.github.javafaker</groupId>
+            <artifactId>javafaker</artifactId>
+            <version>1.0.2</version>
+        </dependency>
+
+
     </dependencies>
 
 </project>
